--- a/src/stand/index.html
+++ b/src/stand/index.html
@@ -8,9 +8,12 @@
   <body>
     <div class="main">
       <h1>stand</h1>
-      <a href="../farm/index.html">farm</a>
-      <a href="../home/index.html">home</a>
-      <a href="../stand/index.html">stand</a>
+      <div class="arrows">
+        <a href="../home/index.html">
+          <img id="right" src="../img/arrow_left.png" alt="right arrow [click to navigate between places]">
+        </a>
+      </div>
+      
     </div>
   </body>
 </html>
