--- a/src/home/index.html
+++ b/src/home/index.html
@@ -8,6 +8,14 @@
   <body>
     <div class="main">
       <h1>home</h1>
+      <div class="arrows">
+        <a href="../stand/index.html">
+          <img id="left" src="../img/arrow_left.png" alt="left arrow [click to navigate between places]">
+        </a>
+        <a href="../farm/index.html">
+          <img id="right" src="../img/arrow_left.png" alt="right arrow [click to navigate between places]">
+        </a>
+      </div>
       
     </div>
   </body>
