--- a/src/farm/index.html
+++ b/src/farm/index.html
@@ -5,9 +5,22 @@
     <title>orange clicker</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body>
+  <body onload="javascript:document.getElementById('orangeCounter').innerHTML='<img src=\'../../build/orange_512.ico\' alt=\'[orange.png]\'>' + localStorage.getItem('oranges')">
     <div class="main">
+      <div class="orangeCounter">
+        <h1 id="orangeCounter"><img src="../../build/orange_512.ico" alt=""></h1>
+      </div>
       <h1>farm</h1>
+      <div class="main">
+        <div class="farm">
+          <div class="trees">
+            <img src="../img/orangetree.png" onclick="orangeHarvest()" alt="">
+          </div>
+        </div>
+        <div class="grass"></div>
+        <div class="grass-fadeout"></div>
+        <div class="ground"></div>
+      </div>
       <div class="arrows">
         <a href="../home/index.html">
           <img id="left" src="../img/arrow_left.png" alt="left arrow [click to navigate between places]">
@@ -15,5 +28,6 @@
       </div>
       
     </div>
+    <script src="./scripts.js"></script>
   </body>
 </html>
