--- a/src/home/index.html
+++ b/src/home/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>orange clicker</title>
+    <title>Orange Clicker</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
