--- a/src/stand/index.html
+++ b/src/stand/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>orange clicker</title>
+    <title>Orange Clicker</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -15,5 +15,6 @@
       </div>
       
     </div>
+    <script src="./scripts.js"></script>
   </body>
 </html>
