--- a/src/home/index.html
+++ b/src/home/index.html
@@ -9,8 +9,18 @@
     <script>
       window.ondragstart = function() {return false}
     </script>
-    <div class="main">
-      <h1>home</h1>
+    <div class="main" >
+
+      <div class="stats">
+        <div class="oranges">
+          <img src="../img/orange_32.png" alt=""><h1 id="orangeCounter"></h1>
+        </div> 
+      </div>
+      
+      <div class="page">
+        <h1>home</h1>
+      </div>
+
       <div class="arrows">
         <a href="../stand/index.html">
           <img id="left" src="../img/arrow_left.png" draggable="false" alt="left arrow [click to navigate between places]">
@@ -21,5 +31,6 @@
       </div>
       
     </div>
+    <script src="../farm/scripts.js"></script>
   </body>
 </html>
